fix #98: impl total group weight & grade calculation; display when group is collapsed only (imho, it doesn't contribute to UI clearness)

--- a/static/css/app/table.less
+++ b/static/css/app/table.less
@@ -55,10 +55,10 @@
 
     /*Group row*/
     &.ng-table-group td {
-      height: auto;
-      padding: 3px 8px;
+      /*height: auto;*/ // Need?
       a {
         display: block;
+        padding: 3px 0;
         text-decoration: none;
         outline: none;
       }
